--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "KznChat",
-    "slug": "KznChat",
+    "name": "SignalClone",
+    "slug": "SignalClone",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
